--- a/less/_single-fund.less
+++ b/less/_single-fund.less
@@ -100,6 +100,20 @@
 }
 
 
+
+// IE specific css
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+	.brand-box{
+		img{
+			width: 100%;
+		}
+	}
+}
+
+
+
+
 .brand-data{
 	display: flex;
     align-items: flex-end;
